--- a/package.json
+++ b/package.json
@@ -10,7 +10,24 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "keywords": [
+    "d3",
+    "d3 4.x",
+    "angular2",
+    "angular4",
+    "ng2",
+    "ngx",
+    "box plot"
+  ],
+  "private": false,
+  "author": {
+    "name": "Tomasz Zielinski",
+    "url": "https://github.com/tzielins"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tzielins/bd2-ngx-hboxplot"
+  },
   "dependencies": {
     "@types/d3-array": "1.2",
     "@types/d3-axis": "1.0",
@@ -39,6 +56,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
