--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd2-ngx-hboxplot",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "license": "MIT",
   "main": "src/lib/index.ts",
   "typings": "src/lib/index.ts",
@@ -34,52 +34,52 @@
   "dependencies": {
     "@types/d3-array": "^1.2",
     "@types/d3-axis": "^1.0",
-    "@types/d3-scale": "^1.0",
-    "@types/d3-selection": "^1.0",
+    "@types/d3-scale": "^1.0.10",
+    "@types/d3-selection": "^1.1.0",
     "@types/d3-selection-multi": "^1.0",
-    "@types/d3-shape": "^1.0",
-    "@types/d3-transition": "^1.0",
+    "@types/d3-shape": "^1.2.0",
+    "@types/d3-transition": "^1.1.0",
     "d3-array": "^1.2",
-    "d3-axis": "^1.0",
+    "d3-axis": "^1.0.8",
     "d3-scale": "^1.0",
-    "d3-selection": "^1.0",
+    "d3-selection": "^1.1.0",
     "d3-selection-multi": "^1.0",
-    "d3-shape": "^1.0",
-    "d3-transition": "^1.0"
+    "d3-shape": "^1.2.0",
+    "d3-transition": "^1.1.0"
   },
   "peerDependencies": {
     "@angular/core": "^4.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
     "@angular/cli": "^1.1.1",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/common": "^4.2.5",
+    "@angular/compiler": "^4.2.5",
+    "@angular/compiler-cli": "^4.2.5",
+    "@angular/core": "^4.2.5",
+    "@angular/forms": "^4.2.5",
+    "@angular/http": "^4.2.5",
     "@angular/language-service": "^4.0.0",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.2.5",
+    "@angular/router": "^4.2.5",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.79",
+    "bootstrap": "^3.3.7",
     "codelyzer": "~3.0.1",
+    "core-js": "^2.4.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
+    "rxjs": "^5.4.1",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "zone.js": "^0.8.12"
   }
 }
