--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "bd2-ngx-hboxplot",
-  "version": "1.0.4",
+  "name": "bd2-ngx-hboxplot-app",
+  "version": "1.7.0",
   "license": "MIT",
-  "main": "src/lib/index.ts",
-  "typings": "src/lib/index.ts",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,9 +13,8 @@
   "keywords": [
     "d3",
     "d3 4.x",
-    "angular2",
-    "angular4",
-    "ng2",
+    "angular",
+    "angular7",
     "ngx",
     "box plot",
     "whisker plot"
@@ -34,52 +31,57 @@
   "dependencies": {
     "@types/d3-array": "^1.2",
     "@types/d3-axis": "^1.0",
-    "@types/d3-scale": "^1.0.10",
-    "@types/d3-selection": "^1.1.0",
+    "@types/d3-scale": "^2.1",
+    "@types/d3-scale-chromatic": "^1.3",
+    "@types/d3-selection": "^1.4",
     "@types/d3-selection-multi": "^1.0",
-    "@types/d3-shape": "^1.2.0",
-    "@types/d3-transition": "^1.1.0",
-    "d3-array": "^1.2",
-    "d3-axis": "^1.0.8",
-    "d3-scale": "^1.0",
-    "d3-selection": "^1.1.0",
+    "@types/d3-shape": "^1.3",
+    "@types/d3-transition": "^1.1",
+    "d3-array": "^2.0",
+    "d3-axis": "^1.0",
+    "d3-scale": "^3.0",
+    "d3-scale-chromatic": "^1.3",
+    "d3-selection": "^1.4.0",
     "d3-selection-multi": "^1.0",
-    "d3-shape": "^1.2.0",
-    "d3-transition": "^1.1.0"
-  },
-  "peerDependencies": {
-    "@angular/core": "^4.0.0"
+    "d3-shape": "^1.3.5",
+    "d3-transition": "^1.2.0",
+    "bootstrap": "^4.3.1",
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.1.1",
-    "@angular/common": "^4.2.5",
-    "@angular/compiler": "^4.2.5",
-    "@angular/compiler-cli": "^4.2.5",
-    "@angular/core": "^4.2.5",
-    "@angular/forms": "^4.2.5",
-    "@angular/http": "^4.2.5",
-    "@angular/language-service": "^4.0.0",
-    "@angular/platform-browser": "^4.2.5",
-    "@angular/platform-browser-dynamic": "^4.2.5",
-    "@angular/router": "^4.2.5",
-    "@types/jasmine": "2.5.45",
-    "@types/node": "^6.0.79",
-    "bootstrap": "^3.3.7",
-    "codelyzer": "~3.0.1",
-    "core-js": "^2.4.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
+    "@angular/cli": "~7.3.6",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "rxjs": "^5.4.1",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "zone.js": "^0.8.12"
+    "ng-packagr": "^4.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   }
 }
