--- a/projects/bd2-ngx-hboxplot/package.json
+++ b/projects/bd2-ngx-hboxplot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd2-ngx-hboxplot",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "license": "MIT",
   "keywords": [
     "d3",
@@ -39,7 +39,7 @@
     "d3-transition": "^1.2.0"
   },
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "~8.2.5",
+    "@angular/core": "~8.2.5"
   }
 }
