--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "bd2-ngx-hboxplot-app",
-  "version": "1.8.0",
+  "name": "bd2-ngx-hboxplot",
+  "version": "1.9.0",
   "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
   "keywords": [
     "d3",
     "d3 4.x",
@@ -28,45 +20,37 @@
     "type": "git",
     "url": "https://github.com/tzielins/bd2-ngx-hboxplot"
   },
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "dependencies": {
-    "@types/d3-array": "^1.2",
-    "@types/d3-axis": "^1.0",
-    "@types/d3-scale": "^2.1",
-    "@types/d3-scale-chromatic": "^1.3",
-    "@types/d3-selection": "^1.4",
-    "@types/d3-selection-multi": "^1.0",
-    "@types/d3-shape": "^1.3",
-    "@types/d3-transition": "^1.1",
-    "d3-array": "^2.0",
-    "d3-axis": "^1.0",
-    "d3-scale": "^3.0",
-    "d3-scale-chromatic": "^1.3",
-    "d3-selection": "^1.4.0",
-    "d3-selection-multi": "^1.0",
-    "d3-shape": "^1.3.5",
-    "d3-transition": "^1.2.0",
-    "bootstrap": "^4.3.1",
-    "@angular/animations": "~8.2.5",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
-    "@angular/forms": "~8.2.5",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "d3": "^5.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.3",
-    "@angular-devkit/build-ng-packagr": "~0.803.3",
-    "@angular/cli": "^8.3.3",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-ng-packagr": "~0.803.20",
+    "@angular/cli": "~8.3.20",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -75,11 +59,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^5.5.0",
+    "ng-packagr": "^5.4.0",
     "protractor": "~5.4.0",
-    "tsickle": "^0.37.0",
     "ts-node": "~7.0.0",
+    "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "@types/d3": "^5.7.2"
   }
 }
