--- a/angular.json
+++ b/angular.json
@@ -14,13 +14,13 @@
           "options": {
             "tsConfig": "projects/bd2-ngx-hboxplot/tsconfig.lib.json",
             "project": "projects/bd2-ngx-hboxplot/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/bd2-ngx-hboxplot/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -161,6 +161,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "bd2-ngx-hboxplot"
+    }
+  },
+  "defaultProject": "bd2-ngx-hboxplot",
+  "cli": {
+    "analytics": "42fd57db-a299-42f1-a36a-937243927bc8"
+  }
 }
