--- a/projects/bd2-ngx-hboxplot/package.json
+++ b/projects/bd2-ngx-hboxplot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd2-ngx-hboxplot",
-  "version": "1.9.1",
+  "version": "1.10.0",
   "license": "MIT",
   "keywords": [
     "d3",
@@ -20,7 +20,7 @@
     "url": "https://github.com/tzielins/bd2-ngx-hboxplot"
   },
   "dependencies": {
-    "d3": "^5.14.2"
+    "d3": "^5.15.0"
   },
   "devDependencies": {
     "tslib": "^1.10.0",
@@ -28,8 +28,8 @@
     "@types/d3": "^5.7.2"
   },
   "peerDependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
+    "@angular/common": "~9.0.2",
+    "@angular/core": "~9.0.2"
 
   }
 }
