--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+
     "bootstrap": "^4.4.1",
     "d3": "^6.1.1",
     "rxjs": "~6.5.4",
@@ -52,6 +53,10 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/d3-axis": "^1.0.12",
+    "@types/d3-scale": "^2.2.0",
+    "@types/d3-scale-chromatic": "^1.5.0",
+    "@types/d3-shape": "^1.3.2",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -64,7 +69,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "@types/d3": "^5.7.2"
+    "typescript": "~4.0.2"
   }
 }
