--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
+      "types",
+
       "node_modules/@types"
     ],
     "lib": [
