--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
-
     "bootstrap": "^4.4.1",
     "d3": "^6.1.1",
     "rxjs": "~6.5.4",
@@ -57,6 +56,8 @@
     "@types/d3-scale": "^2.2.0",
     "@types/d3-scale-chromatic": "^1.5.0",
     "@types/d3-shape": "^1.3.2",
+    "@types/d3-selection": "^1.4.2",
+    "@types/d3-transition": "^1.1.6",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
