--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,8 @@
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
-      "types",
-
-      "node_modules/@types"
+      "node_modules/@types",
+      "types"
     ],
     "lib": [
       "es2018",
