--- a/package.json
+++ b/package.json
@@ -58,12 +58,13 @@
     "@types/d3-shape": "^1.3.2",
     "@types/d3-selection": "^1.4.2",
     "@types/d3-transition": "^1.1.6",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
+    "@types/jasmine": "~3.8.0",
+    "@types/jasminewd2": "2.0.3",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "6.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage-istanbul-reporter": "3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^10.1.0",
