--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "dependencies": {
-    "@angular/animations": "~10.1.1",
-    "@angular/common": "~10.1.1",
-    "@angular/compiler": "~10.1.1",
+    "@angular/animations": "~11.2.14",
+    "@angular/common": "~11.2.14",
+    "@angular/compiler": "~11.2.14",
     "@angular/core": "~10.1.1",
-    "@angular/forms": "~10.1.1",
-    "@angular/platform-browser": "~10.1.1",
-    "@angular/platform-browser-dynamic": "~10.1.1",
-    "@angular/router": "~10.1.1",
+    "@angular/forms": "~11.2.14",
+    "@angular/platform-browser": "~11.2.14",
+    "@angular/platform-browser-dynamic": "~11.2.14",
+    "@angular/router": "~11.2.14",
     "bootstrap": "^4.4.1",
     "d3": "^6.1.1",
     "rxjs": "~6.5.4",
@@ -44,13 +44,13 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular-devkit/build-ng-packagr": "~0.1001.1",
+    "@angular-devkit/build-angular": "~0.1102.19",
+	"@angular-devkit/core": "11.2.19",
     "@angular/cli": "~10.1.1",
-    "@angular/compiler-cli": "~10.1.1",
-    "@angular/language-service": "~10.1.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/compiler-cli": "~11.2.14",
+    "@angular/language-service": "~11.2.14",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "2.0.3",
     "@types/node": "^12.11.1",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-scale": "^2.2.0",
@@ -58,16 +58,14 @@
     "@types/d3-shape": "^1.3.2",
     "@types/d3-selection": "^1.4.2",
     "@types/d3-transition": "^1.1.6",
-    "@types/jasmine": "~3.8.0",
-    "@types/jasminewd2": "2.0.3",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
