Upgraded to ng15

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "es2020",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types",
       "types"
@@ -26,7 +26,8 @@
       "bd2-ngx-hboxplot/*": [
         "dist/bd2-ngx-hboxplot/*"
       ]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
