--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
+          "options": {			  
             "tsConfig": "projects/bd2-ngx-hboxplot/tsconfig.lib.json",
             "project": "projects/bd2-ngx-hboxplot/ng-package.json"
           },
@@ -24,9 +24,12 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],			  
             "main": "projects/bd2-ngx-hboxplot/src/test.ts",
             "tsConfig": "projects/bd2-ngx-hboxplot/tsconfig.spec.json",
-            "karmaConfig": "projects/bd2-ngx-hboxplot/karma.conf.js"
           }
         }
       }
@@ -114,10 +117,12 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/bd2-ngx-hboxplot-demo/src/test.ts",
-            "polyfills": "projects/bd2-ngx-hboxplot-demo/src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ], 
+			"main": "projects/bd2-ngx-hboxplot-demo/src/test.ts",
             "tsConfig": "projects/bd2-ngx-hboxplot-demo/tsconfig.spec.json",
-            "karmaConfig": "projects/bd2-ngx-hboxplot-demo/karma.conf.js",
             "assets": [
               "projects/bd2-ngx-hboxplot-demo/src/favicon.ico",
               "projects/bd2-ngx-hboxplot-demo/src/assets"
