--- a/package.json
+++ b/package.json
@@ -39,17 +39,15 @@
     "@angular/router": "^15.1.1",
     "bootstrap": "^4.4.1",
     "d3": "^6.1.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.2",
     "@angular/cli": "^15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@angular/language-service": "^15.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "2.0.3",
     "@types/node": "^12.11.1",
     "@types/d3-axis": "^1.0.12",
     "@types/d3-scale": "^2.2.0",
@@ -57,17 +55,14 @@
     "@types/d3-shape": "^1.3.2",
     "@types/d3-selection": "^1.4.2",
     "@types/d3-transition": "^1.1.6",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "6.4.1",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^15.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.9.4"
   }
 }
