--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
     "bootstrap": "^4.4.1",
-    "d3": "^6.1.1",
+    "d3": "^7.8.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -48,13 +48,9 @@
     "@angular/cli": "^15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@angular/language-service": "^15.1.1",
+	"@types/d3": "7.4.0",	
     "@types/node": "^12.11.1",
-    "@types/d3-axis": "^1.0.12",
-    "@types/d3-scale": "^2.2.0",
-    "@types/d3-scale-chromatic": "^1.5.0",
-    "@types/d3-shape": "^1.3.2",
-    "@types/d3-selection": "^1.4.2",
-    "@types/d3-transition": "^1.1.6",
+
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -62,7 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "protractor": "~7.0.0",
+    "ng-packagr": "^15.1.1",	
     "typescript": "~4.9.4"
   }
 }
