--- a/projects/bd2-ngx-hboxplot/package.json
+++ b/projects/bd2-ngx-hboxplot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd2-ngx-hboxplot",
-  "version": "1.11.1",
+  "version": "2.2.0",
   "license": "MIT",
   "keywords": [
     "d3",
@@ -20,16 +20,11 @@
     "url": "https://github.com/tzielins/bd2-ngx-hboxplot"
   },
   "dependencies": {
-    "d3": "^6.1.1",
-    "tslib": "^2.0.0"
+    "d3": "^7.8.2",
   },
   "devDependencies": {
-    "tslint": "~6.1.0",
-    "@types/d3": "^5.7.2"
   },
   "peerDependencies": {
-    "@angular/common": "~10.1.1",
-    "@angular/core": "~10.1.1"
-
+    "@angular/core": "^15.1.1",
   }
 }
