--- a/projects/bd2-ngx-hboxplot/package.json
+++ b/projects/bd2-ngx-hboxplot/package.json
@@ -20,11 +20,11 @@
     "url": "https://github.com/tzielins/bd2-ngx-hboxplot"
   },
   "dependencies": {
-    "d3": "^7.8.2",
+    "d3": "^7.8.2"
   },
   "devDependencies": {
   },
   "peerDependencies": {
-    "@angular/core": "^15.1.1",
+    "@angular/core": "^15.1.1"
   }
 }
