--- a/projects/bd2-ngx-hboxplot/package.json
+++ b/projects/bd2-ngx-hboxplot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd2-ngx-hboxplot",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "license": "MIT",
   "keywords": [
     "d3",
@@ -19,12 +19,13 @@
     "type": "git",
     "url": "https://github.com/tzielins/bd2-ngx-hboxplot"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "@angular/common": "^15.1.0",
+    "@angular/core": "^15.1.0",
     "d3": "^7.8.2"
   },
-  "devDependencies": {
+  "dependencies": {
+    "tslib": "^2.3.0"
   },
-  "peerDependencies": {
-    "@angular/core": "^15.1.1"
-  }
+  "sideEffects": false
 }
