--- a/projects/bd2-ngx-hboxplot/package.json
+++ b/projects/bd2-ngx-hboxplot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bd2-ngx-hboxplot",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "license": "MIT",
   "keywords": [
     "d3",
@@ -21,11 +21,11 @@
   },
   "peerDependencies": {
     "@angular/common": "^15.1.0",
-    "@angular/core": "^15.1.0"
+    "@angular/core": "^15.1.0",
+    "d3": "^7.8.2"
   },
   "dependencies": {
-    "tslib": "^2.3.0",
-    "d3": "^7.8.2"
+    "tslib": "^2.3.0"
   },
   "sideEffects": false
 }
