protecting main package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "box plot",
     "whisker plot"
   ],
-  "private": false,
+  "private": true,
   "author": {
     "name": "Tomasz Zielinski",
     "url": "https://github.com/tzielins"
